# repo-dashboard

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
client/: Cargo.toml  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  types.ts
client/src/components/: Button.tsx  ResultsTable.tsx
client/src/hooks/: useFetchDepTree.ts  useFetchOutdated.ts
server/: Cargo.toml  Makefile.toml  temp_package.json
server/src/: handle_response.rs  main.rs  requests.rs
server/src/handlers/: errors.rs  get_deps_tree.rs  get_outdated.rs  handle_response.rs  mod.rs  requests.rs  types.rs
server/src/request_handlers/: handle_response.rs  mod.rs  requests.rs
