[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
http = "0.2"
